...
        }
      }
    },
    "1-10" : {

    },
    "Absolute Neutrophil Count" : {

    },
    "Absolute Neutrophil Counts" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
        }
      }
    },
    "Acknowledge" : {

    },
    "Add" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add"
          }
        }
      }
    },
    "Add Data" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Data"
          }
...
    "Average: %@" : {

    },
    "Bluetooth Devices" : {

    },
    "Body Temperature" : {

    },
    "Body Temperature (°F)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Contacts"
          }
        }
      }
    },
    "Dashboard" : {

    },
    "Date" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
    "Delete Lab Record" : {

    },
    "Delete Medication" : {

    },
    "Diastolic (mmHg)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Diastolic (mmHg)"
          }
...
            "state" : "translated",
            "value" : "This app can access data from Health app."
          }
        }
      }
    },
    "Heart Rate" : {

    },
    "Heart Rate (bpm)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
        }
      }
    },
    "Other factors" : {

    },
    "Oxygen Saturation" : {

    },
    "Oxygen Saturation (%)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Oxygen Saturation (%)"
          }
...
            "state" : "translated",
            "value" : "Swift Package Manager"
          }
        }
      }
    },
    "Systolic (mmHg)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Systolic (mmHg)"
          }
        }
      }
    },
    "Temperature" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Temperature"
          }
...
            "state" : "translated",
            "value" : "This type of event is currently unsupported. Please contact the developer of this app."
          }
        }
      }
    },
    "Threshold" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Threshold"
          }
...
